--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,6 @@
         <br>
         <h1 class="head1">Stay Cool</h1>
         <h1 class="head2">Stay Printed</h1>
-        <img class="m2" src="img/model2.png" alt="">
     </div>
     <section id="store">
         <br>
@@ -565,7 +564,7 @@
 
 
         document.addEventListener("DOMContentLoaded", function () {
-            const text = "Hello, Welcome to AP3X DESIGNS";
+            const text = "Hello, Welcome to UNIQUE DESIGNS";
             const typewriterText = document.getElementById("typewriter-text");
             let index = 0;
 
