added infinite horizontal slider

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,20 @@
         <h1 class="head1">Stay Cool</h1>
         <h1 class="head2">Stay Printed</h1>
     </div>
+    <div class="infinite-slider">
+        <div class="slider-track">
+            <img src="img/diljit.png" alt="Shirt 1">
+            <img src="img/gta6.png" alt="Shirt 2">
+            <img src="img/milesMorals.png" alt="Shirt 3">
+            <img src="img/Naruto.png" alt="Shirt 4">
+            <!-- Repeat for seamless scroll -->
+            <img src="img/plane.png" alt="Shirt 1">
+            <img src="img/KaranAujla.png" alt="Shirt 2">
+            <img src="img/doraemon.png" alt="Shirt 3">
+            <img src="img/pokemon.png" alt="Shirt 4">
+        </div>
+    </div>
+
     <section id="store">
         <br>
         <br>
